更新构建脚本